--- a/index.html
+++ b/index.html
@@ -5,10 +5,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-commerce UI</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Hello World Compass!!</h1>
+    <header>
+        <nav>
+            <div class="container">
+                <div class="style-light">
+                    <div class="nav-brand">
+                        <h3>Bandage</h3>
+                    </div>
+                    <div class="nav-collapse">
+                        <div class="nav1">
+                            <li>Home</li>
+                            <div class="nav-dropdown">
+                                <li>Shop</li>
+                                <li><img src="./icons/setabaixo.png" alt="vector" /></li>
+                            </div>
+                            <li>About</li>
+                            <li>Blog</li>
+                            <li>Contact</li>
+                            <li>Pages</li>
+                        </div>
+                        <div class="nav2">
+                            <div class="navicon">
+                                <li><img src="./icons/login.png" alt="login" /></li>
+                                <li>Login / Register</li>
+                            </div>
+                            <div class="navicon">
+                                <li><img src="./icons/lupa.png" alt="lupa" /></li>
+                            </div>
+                            <div class="navicon">
+                                <li><img src="./icons/carrinho.png" alt="carrinho" /></li>
+                                <li>1</li>
+                            </div>
+                            <div class="navicon">
+                                <li><img src="./icons/coracao.png" alt="coracao" /></li>
+                                <li>1</li>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!-- <div class="carousel">
+            <h1>carousel</h1>
+        </div> -->
+    </header>
+    <!-- <footer>Hello World Compass!!</footer> -->
 </body>
 
 </html>
