--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             <li>Home</li>
                             <div class="nav-dropdown">
                                 <li>Shop</li>
-                                <li><img src="./icons/setabaixo.png" alt="vector" /></li>
+                                <li><img src="./icons/navbar/setabaixo.png" alt="vector" /></li>
                             </div>
                             <li>About</li>
                             <li>Blog</li>
@@ -31,18 +31,18 @@
                         </div>
                         <div class="nav2">
                             <div class="navicon">
-                                <li><img src="./icons/login.png" alt="login" /></li>
+                                <li><img src="./icons/navbar/login.png" alt="login" /></li>
                                 <li>Login / Register</li>
                             </div>
                             <div class="navicon">
-                                <li><img src="./icons/lupa.png" alt="lupa" /></li>
+                                <li><img src="./icons/navbar/lupa.png" alt="lupa" /></li>
                             </div>
                             <div class="navicon">
-                                <li><img src="./icons/carrinho.png" alt="carrinho" /></li>
+                                <li><img src="./icons/navbar/carrinho.png" alt="carrinho" /></li>
                                 <li>1</li>
                             </div>
                             <div class="navicon">
-                                <li><img src="./icons/coracao.png" alt="coracao" /></li>
+                                <li><img src="./icons/navbar/coracao.png" alt="coracao" /></li>
                                 <li>1</li>
                             </div>
                         </div>
@@ -50,9 +50,34 @@
                 </div>
             </div>
         </nav>
-        <!-- <div class="carousel">
-            <h1>carousel</h1>
-        </div> -->
+        <div class="carousel">
+            <div class="indicators">
+                <img src="./icons/carousel/captions2.png" alt="captions2">
+                <img src="./icons/carousel/captions1.png" alt="captions1">
+            </div>
+            <div class="ctrl-prev">
+                <img src="./icons/carousel/ctrl-prev.png" alt="setaEsq">
+            </div>
+            <div class="ctrl-nex">
+                <img src="./icons/carousel/ctrl-nex.png" alt="setaDir">
+            </div>
+
+            <div>
+                <div class="inner">
+                    <div class="item">
+                        <div class="row">
+                            <h1>GROCERIES DELIVERY</h1>
+                            <h4>We know how large objects will act, but things on a small scale just do not act that
+                                way.
+                            </h4>
+                            <button class="btn-car">
+                                <h3>Start Now</h3>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <!-- <footer>Hello World Compass!!</footer> -->
 </body>
