Criação Shop-Cards
Criação de uma seção do corpo da page.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-commerce UI</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="shop-cards.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -79,6 +80,39 @@
             </div>
         </div>
     </header>
+    <main>
+        <section>
+            <div class="shop-cards">
+                <div class="container">
+                    <div class="row">
+                        <div class="card-item" style="background-image: url('/icons/shopcards/sorveteinv.png');">
+                            <ul class="text">
+                                <h6 class="a">Your Space</h6>
+                                <h2 class="b">Unique<br>Life</h2>
+                                <h6 class="c">Explore Items</h6>
+                            </ul>
+                        </div>
+                        <div class="card-item" style="background-image: url('/icons/shopcards/macainv.png');">
+                            <ul class="text">
+                                <h6 class="a">Ends Today</h6>
+                                <h2 class="b">Elements<br>Style</h2>
+                                <h6 class="c">Explore Items</h6>
+                            </ul>
+                        </div>
+                        <div class="card-item" style="background-image: url('/icons/shopcards/porcoinv.png');">
+                            <ul class="text">
+                                <h6 class="a">Ends Today</h6>
+                                <h2 class="b">Elements<br>Style</h2>
+                                <h6 class="c">Explore Items</h6>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+
     <!-- <footer>Hello World Compass!!</footer> -->
 </body>
 
