Criação do Cards de produtos
Parte do folder finalizada.
Navbar dos produtos finalizada.
Falta apenas a construção dos cards dos produtos para finalizar a seção.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>E-commerce UI</title>
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="shop-cards.css">
+    <link rel="stylesheet" href="shop-products.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
@@ -108,6 +109,56 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section>
+            <div class="shop-product">
+                <div class="row">
+                    <div class="md" style="background-image: url('/icons/shopproducts/cadamarelo.jpg');">
+                        <div class="content">
+
+                            <h6 class="a">FURNITURE</h6>
+                            <h6 class="b">5 Items</h6>
+
+                        </div>
+                    </div>
+                    <div class="lg">
+                        <div class="container">
+                            <div class="navbar">
+
+                                <div class="main-content">
+                                    <h5>BESTSELLER PRODUCTS</h5>
+                                </div>
+                                <div class="style-light">
+                                    <div class="lista">
+
+                                        <h6 style="color: #23A6F0;">Men</h6>
+                                        <h6>Women</h6>
+                                        <h6>Accessories</h6>
+
+                                    </div>
+                                    <div class="setas">
+                                        <div class="position">
+                                            <div class="an">
+                                                <img src="./icons/shopproducts/buttonAn.png" alt="Seta Anterior">
+                                            </div>
+                                        </div>
+                                        <div class="position" style="border: 1px solid #737373;">
+                                            <li class="next">
+                                                <img src="./icons/shopproducts/buttonNex.png" alt="Seta Próximo">
+                                            </li>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <div class="linha"></div>
+                            <div class="corp"></div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
             </div>
         </section>
     </main>
