Construção shop-products 4 e 15
Finalizada a construção de desktop-product-cards-4 e desktop-product-cards-15, assim, finalizando ambas as seções.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="shop-cards.css">
     <link rel="stylesheet" href="shop-products.css">
     <link rel="stylesheet" href="shop-products4.css">
+    <link rel="stylesheet" href="shop-products15.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <script src="./main.js"></script>
 </head>
@@ -23,15 +24,15 @@
                     </div>
                     <div class="nav-collapse">
                         <ul class="nav1">
-                            <li><a href="home">Home</a></li>
+                            <li><a href="/">Home</a></li>
                             <ul class="nav-dropdown">
-                                <li><a href="shop">Shop</a></li>
+                                <li><a href="/">Shop</a></li>
                                 <li><img src="./icons/navbar/setabaixo.png" alt="vector" /></li>
                             </ul>
-                            <li><a href="about">About</a></li>
-                            <li><a href="blog">Blog</a></li>
-                            <li><a href="contact">Contact</a></li>
-                            <li><a href="pages">Pages</a></li>
+                            <li><a href="/">About</a></li>
+                            <li><a href="/">Blog</a></li>
+                            <li><a href="/">Contact</a></li>
+                            <li><a href="/">Pages</a></li>
                         </ul>
                         <div class="nav2">
                             <ul class="navicon">
@@ -163,7 +164,7 @@
                                                         <img src="./icons/shopproducts/sorvete.png" alt="Sorvete">
                                                         <div id="frameItem" class="frame-item">
                                                             <h5 style="color: #252B42;">Graphic Design</h5>
-                                                            <li> <a href="englishDepartment"
+                                                            <li> <a href="/"
                                                                     style="text-decoration: none; color: #737373; font-size: 14px;">
                                                                     English
                                                                     Department</a></li>
@@ -222,7 +223,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="second-row">
                         <div class="col-lg">
                             <div class="flex-row">
@@ -233,14 +233,12 @@
                                 </div>
                             </div>
                         </div>
-
                         <div class="col-lg">
                             <div class="flex-row">
                                 <h2>2.</h2>
                                 <div id="flexRowDupl"></div>
                             </div>
                         </div>
-
                         <div class="col-lg">
                             <div class="flex-row">
                                 <h2>3.</h2>
@@ -253,7 +251,6 @@
                                 <div id="flexRowDupl2"></div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -272,8 +269,97 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section>
+            <div class="most-popular">
+                <div class="container">
+                    <div class="first-row">
+                        <div class="col-md">
+                            <div class="product-card">
+                                <h5>MOST POPULAR</h5>
+                                <p>We focus on ergonomics and meeting you where you work. It's only a keystroke away.
+                                </p>
+                                <div class="carne-container"><img src="./icons/mostpopular/caramel-cashew.png"
+                                        alt="Bandeja de Carne"></div>
+                                <li> <a href="/" style="text-decoration: none; color: #252B42; font-size: 14px;">English
+                                        Department</a>
+                                </li>
+                                <div class="sales">
+                                    <div style="width: 16px; height: 16px;">
+                                        <img src="./icons/mostpopular/box.png" alt="Caixa">
+                                    </div>
+                                    <h6>15 Sales</h6>
+                                </div>
+                                <ul>
+                                    <li style="color: #BDBDBD;">$16.48</li>
+                                    <li style="color: #23856D;">$6.48</li>
+                                </ul>
+                                <ul class="selection-colors">
+                                    <li style="background-color: #23A6F0; ">
+                                    </li>
+                                    <li style="background-color: #23856D;">
+                                    </li>
+                                    <li style="background-color: #E77C40;">
+                                    </li>
+                                    <li style="background-color: #252B42; ">
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <img src="./icons/mostpopular/hamburguer.png" alt="Motociclista">
+                    </div>
+                </div>
+            </div>
             </div>
         </section>
+
+
+        <section>
+            <div class="bestseller-products">
+                <div class="container">
+                    <div class="title">
+                        <h3>BESTSELLER PRODUCTS</h3>
+                    </div>
+
+
+                    <div class="linha"></div>
+
+                    <div class="container-cards">
+                        <div class="container-item">
+                            <div class="card-item">
+                                <img src="./icons/bestsellerproducts/regador.png" alt="Regador Azul">
+                                <div id="frameDupl3" class="frame-item">
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="container-item">
+                            <div class="card-item">
+                                <img src="./icons/bestsellerproducts/frutasvermelhas.png" alt="Frutas Vermelhas">
+                                <div id="frameDupl4" class="frame-item">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container-item">
+                            <div class="card-item">
+                                <img src="./icons/bestsellerproducts/sabaoliq.png" alt="Sabão líquido">
+                                <div id="frameDupl5" class="frame-item">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="container-item">
+                            <div class="card-item">
+                                <img src="./icons/bestsellerproducts/caramel.png" alt="Pacote de Caramelo">
+                                <div id="frameDupl6" class="frame-item">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
 
@@ -283,7 +369,14 @@
         // Duplicar Card Item
         let frameOriginal = document.getElementById("frameItem");
 
-        let frameArray = [document.getElementById("frameDupl1"), document.getElementById("frameDupl2")]
+        let frameArray = [
+            document.getElementById("frameDupl1"),
+            document.getElementById("frameDupl2"),
+            document.getElementById("frameDupl3"),
+            document.getElementById("frameDupl4"),
+            document.getElementById("frameDupl5"),
+            document.getElementById("frameDupl6"),
+        ]
 
         let framesDuplicados = []
 
