--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-commerce UI</title>
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="shop-cards.css">
-    <link rel="stylesheet" href="shop-products.css">
-    <link rel="stylesheet" href="shop-products4.css">
-    <link rel="stylesheet" href="shop-products15.css">
+    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/shop-cards.css">
+    <link rel="stylesheet" href="./styles/shop-products.css">
+    <link rel="stylesheet" href="./styles/shop-products4.css">
+    <link rel="stylesheet" href="./styles/shop-products15.css">
+    <link rel="stylesheet" href="./styles/clients.css">
+    <link rel="stylesheet" href="./styles/blog.css">
+    <link rel="stylesheet" href="./styles/footer.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <script src="./main.js"></script>
 </head>
@@ -270,7 +273,6 @@
                 </div>
             </div>
         </section>
-
         <section>
             <div class="most-popular">
                 <div class="container">
@@ -313,18 +315,13 @@
             </div>
             </div>
         </section>
-
-
         <section>
             <div class="bestseller-products">
                 <div class="container">
                     <div class="title">
                         <h3>BESTSELLER PRODUCTS</h3>
                     </div>
-
-
                     <div class="linha"></div>
-
                     <div class="container-cards">
                         <div class="container-item">
                             <div class="card-item">
@@ -333,7 +330,6 @@
                                 </div>
                             </div>
                         </div>
-
                         <div class="container-item">
                             <div class="card-item">
                                 <img src="./icons/bestsellerproducts/frutasvermelhas.png" alt="Frutas Vermelhas">
@@ -359,11 +355,150 @@
                 </div>
             </div>
         </section>
+        <section>
+            <div class="clients">
+                <ul class="container">
+                    <li><a href="./icons/clients/brands1.png">
+                            <img src="./icons/clients/brands1.png" alt="">
+                        </a>
+                    </li>
+                    <li><a href="./icons/clients/brands2.png">
+                            <img src="./icons/clients/brands2.png" alt="">
+                        </a>
+                    </li>
+                    <li><a href="./icons/clients/brands3.png">
+                            <img src="./icons/clients/brands3.png" alt="">
+                        </a>
+                    </li>
+                    <li><a href="./icons/clients/brands4.png">
+                            <img src="./icons/clients/brands4.png" alt="">
+                        </a>
+                    </li>
+                    <li><a href="./icons/clients/brands5.png">
+                            <img src="./icons/clients/brands5.png" alt="">
+                        </a>
+                    </li>
+                    <li><a href="./icons/clients/brands6.png">
+                            <img src="./icons/clients/brands6.png" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section>
+            <div class="blog">
+                <div class="container">
+                    <div class="first-row" style="background-color: aqua;">
+                        <div class="title-content">
+                            <h6>Practice Advice</h6>
+                            <h3>Featured Posts</h3>
+                        </div>
+                    </div>
+                    <div class="second-row" style="background-color: aqua;">
+                        <div class="body-blog">
+                            <h1>PARADO AQUI</h1>
+                        </div>
 
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
+    <footer>
 
-    <!-- <footer>Hello World Compass!!</footer> -->
+        <div class="start">
+            <div class="container">
+                <div class="row">
+                    <ul>
+                        <h3>Consulting Agency For Your Business</h3>
+                        <p>the quick fox jumps over the lazy dog</p>
+                    </ul>
+                    <div>
+                        <button>Contact Us</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="mid">
+            <div class="container">
+                <div class="row">
+                    <div class="card">
+                        <h5>Company Info</h5>
+                        <ul>
+                            <li><a href="/">About Us</a></li>
+                            <li><a href="/">Carrier</a></li>
+                            <li><a href="/">We are hiring</a></li>
+                            <li><a href="/">Blog</a></li>
+                        </ul>
+                    </div>
+                    <div class="card">
+                        <h5>Legal</h5>
+                        <ul>
+                            <li><a href="/">About Us</a></li>
+                            <li><a href="/">Carrier</a></li>
+                            <li><a href="/">We are hiring</a></li>
+                            <li><a href="/">Blog</a></li>
+                        </ul>
+                    </div>
+                    <div class="card">
+                        <h5>Features</h5>
+                        <ul>
+                            <li><a href="/">Business Marketing</a></li>
+                            <li><a href="/">User Analytic</a></li>
+                            <li><a href="/">Live Chat</a></li>
+                            <li><a href="/">Unlimited Support</a></li>
+                        </ul>
+                    </div>
+                    <div class="card">
+                        <h5>Resources</h5>
+                        <ul>
+                            <li><a href="/">IOS & Android</a></li>
+                            <li><a href="/">Watch a Demo</a></li>
+                            <li><a href="/">Customers</a></li>
+                            <li><a href="/">API</a></li>
+                        </ul>
+                    </div>
+                    <div class="card-unique">
+                        <h5>Get In Touch</h5>
+                        <div class="feature-item">
+                            <div class="item">
+                                <img src="./icons/footer/phone.png" alt="Phone">
+                                <h6>(480) 555-0103</h6>
+                            </div>
+                            <div class="item">
+                                <img src="./icons/footer/map.png" alt="Phone">
+                                <address>
+                                    <h6>4517 Washington Ave.</h6>
+                                </address>
+                            </div>
+                            <div class="item">
+                                <img src="./icons/footer/mail.png" alt="Phone">
+                                <h6>debra.holt@example.com</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="end">
+            <div class="container">
+                <li>Made With Love By Finland All Right Reserved</li>
+                <div class="container-social-media">
+                    <ul class="social-media">
+                        <li><a href="/"><img src="./icons/footer/facebook.png" alt=""></a>
+                        </li>
+                        <li><a href="/"><img src="./icons/footer/instagram.png" alt=""></a>
+                        </li>
+                        <li><a href="/"><img src="./icons/footer/twitter.png" alt=""></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+    </footer>
+
+
     <script>
 
         // Duplicar Card Item
