--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="./styles/blog.css">
     <link rel="stylesheet" href="./styles/footer.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <script src="./main.js"></script>
 </head>
 
 <body>
@@ -59,9 +58,11 @@
             </div>
         </nav>
         <div class="carousel">
-            <div class="indicators">
-                <img src="./icons/carousel/captions2.png" alt="captions2">
-                <img src="./icons/carousel/captions1.png" alt="captions1">
+            <div class="container-indicators">
+                <div class="indicators">
+                    <img src="./icons/carousel/captions2.png" alt="captions2">
+                    <img src="./icons/carousel/captions1.png" alt="captions1">
+                </div>
             </div>
             <div class="ctrl-prev">
                 <img src="./icons/carousel/ctrl-prev.png" alt="setaEsq">
@@ -202,7 +203,6 @@
                     </div>
                 </div>
             </div>
-            </div>
         </section>
         <section>
             <div class="most-popular">
@@ -274,7 +274,7 @@
             </div>
         </section>
         <section>
-            <div class="most-popular">
+            <div class="most-popular2">
                 <div class="container">
                     <div class="first-row">
                         <div class="col-md">
@@ -312,7 +312,6 @@
                         <img src="./icons/mostpopular/hamburguer.png" alt="Motociclista">
                     </div>
                 </div>
-            </div>
             </div>
         </section>
         <section>
@@ -385,20 +384,77 @@
                 </ul>
             </div>
         </section>
-        <section>
+        <section id="blog">
             <div class="blog">
                 <div class="container">
-                    <div class="first-row" style="background-color: aqua;">
+                    <div class="first-row">
                         <div class="title-content">
                             <h6>Practice Advice</h6>
                             <h3>Featured Posts</h3>
                         </div>
                     </div>
-                    <div class="second-row" style="background-color: aqua;">
-                        <div class="body-blog">
-                            <h1>PARADO AQUI</h1>
+                    <div class="second-row">
+                        <div class="blog-body">
+                            <div class="content-card">
+                                <div class="photograph" style="background-image: url('./icons/blog/rua.png');">
+                                    <div class="tag">
+                                        <h6>NEW</h6>
+                                    </div>
+                                </div>
+                                <div id="blogText" class="blog-text">
+                                    <ul>
+                                        <small style="color: #8EC2F2;">Google</small>
+                                        <small>Trending</small>
+                                        <small>New</small>
+                                    </ul>
+                                    <h4>Loudest à la Madison #1 (L'integral)</h4>
+                                    <p>We focus on ergonomics and meeting <br>
+                                        you where you work. It's only a <br>
+                                        keystroke away.
+                                    </p>
+                                    <div class="text-frame">
+                                        <div class="blog-day">
+                                            <div class="container-img">
+                                                <img src="./icons/blog/timer.png" alt="Timer">
+                                            </div>
+                                            <small>22 April 2021</small>
+                                        </div>
+                                        <div class="blog-comments">
+                                            <div class="container-img">
+                                                <img src="./icons/blog/graphic.png" alt="Gráfico">
+                                            </div>
+                                            <small>10 comments</small>
+                                        </div>
+                                    </div>
+                                    <a href="/">
+                                        <h6>Learn More</h6>
+                                        <img src="./icons/blog/setadir.png" alt="Seta para direita">
+                                    </a>
+                                </div>
+                            </div>
                         </div>
-
+                        <div class="blog-body">
+                            <div class="content-card">
+                                <div class="photograph" style="background-image: url('./icons/blog/fusca.png');">
+                                    <div class="tag">
+                                        <h6>NEW</h6>
+                                    </div>
+                                </div>
+                                <div id="blogTextDupl" class="blog-text">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="blog-body">
+                            <div class="content-card">
+                                <div class="photograph" style="background-image: url('./icons/blog/umbrela.png');">
+                                    <div class="tag">
+                                        <h6>NEW</h6>
+                                    </div>
+                                </div>
+                                <div id="blogTextDupl1" class="blog-text">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -406,7 +462,6 @@
     </main>
 
     <footer>
-
         <div class="start">
             <div class="container">
                 <div class="row">
@@ -495,79 +550,10 @@
                 </div>
             </div>
         </div>
-
     </footer>
 
 
-    <script>
-
-        // Duplicar Card Item
-        let frameOriginal = document.getElementById("frameItem");
-
-        let frameArray = [
-            document.getElementById("frameDupl1"),
-            document.getElementById("frameDupl2"),
-            document.getElementById("frameDupl3"),
-            document.getElementById("frameDupl4"),
-            document.getElementById("frameDupl5"),
-            document.getElementById("frameDupl6"),
-        ]
-
-        let framesDuplicados = []
-
-        const duplicarFrame = () => {
-
-            for (i = 0; i < frameArray.length; i++) {
-                let clone = frameOriginal.cloneNode(true);
-                frameArray[i].appendChild(clone)
-                framesDuplicados.push(clone)
-            }
-            return framesDuplicados;
-        };
-
-        duplicarFrame()
-
-        // Duplicar Grupo de Cartas
-        const groupOriginal = document.getElementById("groupCards");
-        const groupElement = document.getElementById("groupDupl");
-
-        const duplicarGroup = () => {
-            const groupDuplicado = groupOriginal.cloneNode(true)
-            return groupElement.appendChild(groupDuplicado)
-        }
-        duplicarGroup()
-
-        // Duplicar Tabela de Produtos
-        const tabProductOriginal = document.getElementById("tabProduct");
-        const tabProductElement = document.getElementById("tabProductDupl");
-
-        const duplicarTabProduct = () => {
-            const tabProductDuplicado = tabProductOriginal.cloneNode(true)
-            return tabProductElement.appendChild(tabProductDuplicado)
-        }
-        duplicarTabProduct()
-
-        // Duplicar flexRow
-        const flexRowOriginal = document.getElementById("flexRow");
-        const flexRowArray = [
-            document.getElementById("flexRowDupl"),
-            document.getElementById("flexRowDupl1"),
-            document.getElementById("flexRowDupl2")
-        ];
-        let flexRowDuplicados = []
-
-        const duplicarFlexRow = () => {
-
-            for (i = 0; i < flexRowArray.length; i++) {
-                let clone = flexRowOriginal.cloneNode(true);
-                flexRowArray[i].appendChild(clone);
-                flexRowDuplicados.push(clone);
-            }
-            return flexRowDuplicados;
-        }
-        duplicarFlexRow()
-
-    </script>
+    <script src="./main.js"></script>
 </body>
 
 </html>
